test: 송금 처리 중 예외 발생 시 테스트 코드 추가